# api/api-iam/iam-client/src/main/resources/swagger.yaml
@@ -2620,6 +2620,20 @@ paths:
                                 items:
                                     $ref: "#/components/schemas/CustomerDto"
                             example: null
+    /iam/v1/cas/password/policy:
+        get:
+            tags:
+                - Cas
+            summary: Get the password policy enforced by IAM
+            operationId: cas_getPasswordPolicy
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        '*/*':
+                            schema:
+                                $ref: "#/components/schemas/PasswordPolicyDto"
+                            example: null
     /iam/v1/applications:
         get:
             tags:
@@ -3712,6 +3726,27 @@ components:
                     type: integer
                     format: int32
                     example: null
+            example: null
+        PasswordPolicyDto:
+            type: object
+            properties:
+                minLength:
+                    type: integer
+                    format: int32
+                    example: null
+                profile:
+                    type: string
+                    example: null
+                maxOldPassword:
+                    type: integer
+                    format: int32
+                    example: null
+                messages:
+                    type: array
+                    example: null
+                    items:
+                        type: string
+                        example: null
             example: null
         LoginRequestDto:
             required:
